# rust_crud

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs  utils.rs
templates/: base.html  dashboard.html  login.html  new_item.html  signup.html
